// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mcp tool registry > keeps a stable tools snapshot for the admin profile 1`] = `
[
  {
    "method": "GET",
    "name": "mcphub_get_marketplace_well_known",
    "path": "/.well-known/mcp-marketplace",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_downstream_openapi_spec",
    "path": "/api/:name/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_activities",
    "path": "/api/activities",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity",
    "path": "/api/activities/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_check_activities_available",
    "path": "/api/activities/available",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_filters",
    "path": "/api/activities/filters",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_stats",
    "path": "/api/activities/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_current_user",
    "path": "/api/auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_better_auth_user",
    "path": "/api/better-auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_changelog_update_info",
    "path": "/api/changelog/update-info",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_categories",
    "path": "/api/cloud/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_category",
    "path": "/api/cloud/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_servers",
    "path": "/api/cloud/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server",
    "path": "/api/cloud/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server_tools",
    "path": "/api/cloud/servers/:serverName/tools",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_cloud_servers",
    "path": "/api/cloud/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_tags",
    "path": "/api/cloud/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_tag",
    "path": "/api/cloud/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_costs",
    "path": "/api/cost/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server_costs",
    "path": "/api/cost/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_groups",
    "path": "/api/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group",
    "path": "/api/groups/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_configs",
    "path": "/api/groups/:id/server-configs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_config",
    "path": "/api/groups/:id/server-configs/:serverName",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_group_server_tools",
    "path": "/api/groups/:id/server-configs/:serverName/tools",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_group_servers",
    "path": "/api/groups/:id/servers",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_add_server_to_group",
    "path": "/api/groups/:id/servers",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_remove_server_from_group",
    "path": "/api/groups/:id/servers/:serverName",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_replace_group_servers",
    "path": "/api/groups/:id/servers/batch",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_logs",
    "path": "/api/logs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_categories",
    "path": "/api/market/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_category",
    "path": "/api/market/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_servers",
    "path": "/api/market/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_server",
    "path": "/api/market/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_market_servers",
    "path": "/api/market/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_tags",
    "path": "/api/market/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_tag",
    "path": "/api/market/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_export_settings",
    "path": "/api/mcp-settings/export",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_downstream_openapi_spec",
    "path": "/api/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_openapi_servers",
    "path": "/api/openapi/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_openapi_stats",
    "path": "/api/openapi/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_prompts",
    "path": "/api/prompts",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_registry_servers",
    "path": "/api/registry/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_version",
    "path": "/api/registry/servers/version",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_versions",
    "path": "/api/registry/servers/versions",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_resources",
    "path": "/api/resources",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_read_builtin_resource",
    "path": "/api/resources/read",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_servers",
    "path": "/api/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server",
    "path": "/api/servers/:name",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_reload_server",
    "path": "/api/servers/:name/reload",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server",
    "path": "/api/servers/:name/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_prompt",
    "path": "/api/servers/:serverName/prompts/:promptName/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_resource",
    "path": "/api/servers/:serverName/resources/:resourceUri/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_tool",
    "path": "/api/servers/:serverName/tools/:toolName/toggle",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_settings_snapshot",
    "path": "/api/settings",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_export_config_template",
    "path": "/api/templates/export",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_export_group_template",
    "path": "/api/templates/export/groups/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user_stats",
    "path": "/api/users-stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_runtime_config",
    "path": "/config",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_categories",
    "path": "/discovery/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_servers",
    "path": "/discovery/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server",
    "path": "/discovery/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server_install",
    "path": "/discovery/servers/:name/install",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_tags",
    "path": "/discovery/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_health_check",
    "path": "/health",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_public_config",
    "path": "/public-config",
    "profile": "safe",
  },
  {
    "method": "DELETE",
    "name": "mcphub_cleanup_activities",
    "path": "/api/activities/cleanup",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_list_bearer_keys",
    "path": "/api/auth/keys",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_bearer_key",
    "path": "/api/auth/keys",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_bearer_key",
    "path": "/api/auth/keys/:id",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_bearer_key",
    "path": "/api/auth/keys/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_group",
    "path": "/api/groups",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_group",
    "path": "/api/groups/:id",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_group",
    "path": "/api/groups/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_batch_create_groups",
    "path": "/api/groups/batch",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_clear_logs",
    "path": "/api/logs",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_list_oauth_clients",
    "path": "/api/oauth/clients",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_oauth_client",
    "path": "/api/oauth/clients",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_get_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_builtin_prompt",
    "path": "/api/prompts",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_builtin_resource",
    "path": "/api/resources",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_server",
    "path": "/api/servers",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_server",
    "path": "/api/servers/:name",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server",
    "path": "/api/servers/:name",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_batch_create_servers",
    "path": "/api/servers/batch",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_list_users",
    "path": "/api/users",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_user",
    "path": "/api/users",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
]
`;

exports[`mcp tool registry > keeps a stable tools snapshot for the all profile 1`] = `
[
  {
    "method": "GET",
    "name": "mcphub_get_marketplace_well_known",
    "path": "/.well-known/mcp-marketplace",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_downstream_openapi_spec",
    "path": "/api/:name/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_activities",
    "path": "/api/activities",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity",
    "path": "/api/activities/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_check_activities_available",
    "path": "/api/activities/available",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_filters",
    "path": "/api/activities/filters",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_stats",
    "path": "/api/activities/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_current_user",
    "path": "/api/auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_better_auth_user",
    "path": "/api/better-auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_changelog_update_info",
    "path": "/api/changelog/update-info",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_categories",
    "path": "/api/cloud/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_category",
    "path": "/api/cloud/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_servers",
    "path": "/api/cloud/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server",
    "path": "/api/cloud/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server_tools",
    "path": "/api/cloud/servers/:serverName/tools",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_cloud_servers",
    "path": "/api/cloud/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_tags",
    "path": "/api/cloud/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_tag",
    "path": "/api/cloud/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_costs",
    "path": "/api/cost/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server_costs",
    "path": "/api/cost/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_groups",
    "path": "/api/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group",
    "path": "/api/groups/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_configs",
    "path": "/api/groups/:id/server-configs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_config",
    "path": "/api/groups/:id/server-configs/:serverName",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_group_server_tools",
    "path": "/api/groups/:id/server-configs/:serverName/tools",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_group_servers",
    "path": "/api/groups/:id/servers",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_add_server_to_group",
    "path": "/api/groups/:id/servers",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_remove_server_from_group",
    "path": "/api/groups/:id/servers/:serverName",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_replace_group_servers",
    "path": "/api/groups/:id/servers/batch",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_logs",
    "path": "/api/logs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_categories",
    "path": "/api/market/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_category",
    "path": "/api/market/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_servers",
    "path": "/api/market/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_server",
    "path": "/api/market/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_market_servers",
    "path": "/api/market/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_tags",
    "path": "/api/market/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_tag",
    "path": "/api/market/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_export_settings",
    "path": "/api/mcp-settings/export",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_downstream_openapi_spec",
    "path": "/api/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_openapi_servers",
    "path": "/api/openapi/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_openapi_stats",
    "path": "/api/openapi/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_prompts",
    "path": "/api/prompts",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_registry_servers",
    "path": "/api/registry/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_version",
    "path": "/api/registry/servers/version",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_versions",
    "path": "/api/registry/servers/versions",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_resources",
    "path": "/api/resources",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_read_builtin_resource",
    "path": "/api/resources/read",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_servers",
    "path": "/api/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server",
    "path": "/api/servers/:name",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_reload_server",
    "path": "/api/servers/:name/reload",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server",
    "path": "/api/servers/:name/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_prompt",
    "path": "/api/servers/:serverName/prompts/:promptName/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_resource",
    "path": "/api/servers/:serverName/resources/:resourceUri/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_tool",
    "path": "/api/servers/:serverName/tools/:toolName/toggle",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_settings_snapshot",
    "path": "/api/settings",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_export_config_template",
    "path": "/api/templates/export",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_export_group_template",
    "path": "/api/templates/export/groups/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user_stats",
    "path": "/api/users-stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_runtime_config",
    "path": "/config",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_categories",
    "path": "/discovery/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_servers",
    "path": "/discovery/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server",
    "path": "/discovery/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server_install",
    "path": "/discovery/servers/:name/install",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_tags",
    "path": "/discovery/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_health_check",
    "path": "/health",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_public_config",
    "path": "/public-config",
    "profile": "safe",
  },
  {
    "method": "DELETE",
    "name": "mcphub_cleanup_activities",
    "path": "/api/activities/cleanup",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_list_bearer_keys",
    "path": "/api/auth/keys",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_bearer_key",
    "path": "/api/auth/keys",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_bearer_key",
    "path": "/api/auth/keys/:id",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_bearer_key",
    "path": "/api/auth/keys/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_call_cloud_tool",
    "path": "/api/cloud/servers/:serverName/tools/:toolName/call",
    "profile": "all",
  },
  {
    "method": "POST",
    "name": "mcphub_create_group",
    "path": "/api/groups",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_group",
    "path": "/api/groups/:id",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_group",
    "path": "/api/groups/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_batch_create_groups",
    "path": "/api/groups/batch",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_clear_logs",
    "path": "/api/logs",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_upload_mcpb_bundle",
    "path": "/api/mcpb/upload",
    "profile": "all",
  },
  {
    "method": "GET",
    "name": "mcphub_list_oauth_clients",
    "path": "/api/oauth/clients",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_oauth_client",
    "path": "/api/oauth/clients",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_get_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_oauth_client",
    "path": "/api/oauth/clients/:clientId",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_regenerate_oauth_client_secret",
    "path": "/api/oauth/clients/:clientId/regenerate-secret",
    "profile": "all",
  },
  {
    "method": "POST",
    "name": "mcphub_create_builtin_prompt",
    "path": "/api/prompts",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_builtin_resource",
    "path": "/api/resources",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_server",
    "path": "/api/servers",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_server",
    "path": "/api/servers/:name",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server",
    "path": "/api/servers/:name",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_batch_create_servers",
    "path": "/api/servers/batch",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_system_config",
    "path": "/api/system-config",
    "profile": "all",
  },
  {
    "method": "POST",
    "name": "mcphub_import_config_template",
    "path": "/api/templates/import",
    "profile": "all",
  },
  {
    "method": "GET",
    "name": "mcphub_list_users",
    "path": "/api/users",
    "profile": "admin",
  },
  {
    "method": "POST",
    "name": "mcphub_create_user",
    "path": "/api/users",
    "profile": "admin",
  },
  {
    "method": "DELETE",
    "name": "mcphub_delete_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_user",
    "path": "/api/users/:username",
    "profile": "admin",
  },
]
`;

exports[`mcp tool registry > keeps a stable tools snapshot for the ops profile 1`] = `
[
  {
    "method": "GET",
    "name": "mcphub_get_marketplace_well_known",
    "path": "/.well-known/mcp-marketplace",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_downstream_openapi_spec",
    "path": "/api/:name/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_activities",
    "path": "/api/activities",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity",
    "path": "/api/activities/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_check_activities_available",
    "path": "/api/activities/available",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_filters",
    "path": "/api/activities/filters",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_stats",
    "path": "/api/activities/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_current_user",
    "path": "/api/auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_better_auth_user",
    "path": "/api/better-auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_changelog_update_info",
    "path": "/api/changelog/update-info",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_categories",
    "path": "/api/cloud/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_category",
    "path": "/api/cloud/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_servers",
    "path": "/api/cloud/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server",
    "path": "/api/cloud/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server_tools",
    "path": "/api/cloud/servers/:serverName/tools",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_cloud_servers",
    "path": "/api/cloud/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_tags",
    "path": "/api/cloud/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_tag",
    "path": "/api/cloud/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_costs",
    "path": "/api/cost/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server_costs",
    "path": "/api/cost/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_groups",
    "path": "/api/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group",
    "path": "/api/groups/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_configs",
    "path": "/api/groups/:id/server-configs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_config",
    "path": "/api/groups/:id/server-configs/:serverName",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_group_server_tools",
    "path": "/api/groups/:id/server-configs/:serverName/tools",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_group_servers",
    "path": "/api/groups/:id/servers",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_add_server_to_group",
    "path": "/api/groups/:id/servers",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_remove_server_from_group",
    "path": "/api/groups/:id/servers/:serverName",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_replace_group_servers",
    "path": "/api/groups/:id/servers/batch",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_logs",
    "path": "/api/logs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_categories",
    "path": "/api/market/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_category",
    "path": "/api/market/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_servers",
    "path": "/api/market/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_server",
    "path": "/api/market/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_market_servers",
    "path": "/api/market/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_tags",
    "path": "/api/market/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_tag",
    "path": "/api/market/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_export_settings",
    "path": "/api/mcp-settings/export",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_downstream_openapi_spec",
    "path": "/api/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_openapi_servers",
    "path": "/api/openapi/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_openapi_stats",
    "path": "/api/openapi/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_prompts",
    "path": "/api/prompts",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_list_registry_servers",
    "path": "/api/registry/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_version",
    "path": "/api/registry/servers/version",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_versions",
    "path": "/api/registry/servers/versions",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_resources",
    "path": "/api/resources",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "safe",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_read_builtin_resource",
    "path": "/api/resources/read",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_servers",
    "path": "/api/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server",
    "path": "/api/servers/:name",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_reload_server",
    "path": "/api/servers/:name/reload",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server",
    "path": "/api/servers/:name/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_prompt_description",
    "path": "/api/servers/:serverName/prompts/:promptName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_prompt",
    "path": "/api/servers/:serverName/prompts/:promptName/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_resource_description",
    "path": "/api/servers/:serverName/resources/:resourceUri/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_resource",
    "path": "/api/servers/:serverName/resources/:resourceUri/toggle",
    "profile": "ops",
  },
  {
    "method": "DELETE",
    "name": "mcphub_reset_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "PUT",
    "name": "mcphub_update_server_tool_description",
    "path": "/api/servers/:serverName/tools/:toolName/description",
    "profile": "ops",
  },
  {
    "method": "POST",
    "name": "mcphub_toggle_server_tool",
    "path": "/api/servers/:serverName/tools/:toolName/toggle",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_settings_snapshot",
    "path": "/api/settings",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_export_config_template",
    "path": "/api/templates/export",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_export_group_template",
    "path": "/api/templates/export/groups/:id",
    "profile": "ops",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user_stats",
    "path": "/api/users-stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_runtime_config",
    "path": "/config",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_categories",
    "path": "/discovery/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_servers",
    "path": "/discovery/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server",
    "path": "/discovery/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server_install",
    "path": "/discovery/servers/:name/install",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_tags",
    "path": "/discovery/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_health_check",
    "path": "/health",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_public_config",
    "path": "/public-config",
    "profile": "safe",
  },
]
`;

exports[`mcp tool registry > keeps a stable tools snapshot for the safe profile 1`] = `
[
  {
    "method": "GET",
    "name": "mcphub_get_marketplace_well_known",
    "path": "/.well-known/mcp-marketplace",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_downstream_openapi_spec",
    "path": "/api/:name/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_activities",
    "path": "/api/activities",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity",
    "path": "/api/activities/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_check_activities_available",
    "path": "/api/activities/available",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_filters",
    "path": "/api/activities/filters",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_activity_stats",
    "path": "/api/activities/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_current_user",
    "path": "/api/auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_better_auth_user",
    "path": "/api/better-auth/user",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_changelog_update_info",
    "path": "/api/changelog/update-info",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_categories",
    "path": "/api/cloud/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_category",
    "path": "/api/cloud/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_servers",
    "path": "/api/cloud/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server",
    "path": "/api/cloud/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_server_tools",
    "path": "/api/cloud/servers/:serverName/tools",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_cloud_servers",
    "path": "/api/cloud/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_cloud_tags",
    "path": "/api/cloud/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_cloud_servers_by_tag",
    "path": "/api/cloud/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_costs",
    "path": "/api/cost/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server_costs",
    "path": "/api/cost/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_groups",
    "path": "/api/groups",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group",
    "path": "/api/groups/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_configs",
    "path": "/api/groups/:id/server-configs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_group_server_config",
    "path": "/api/groups/:id/server-configs/:serverName",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_group_servers",
    "path": "/api/groups/:id/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_logs",
    "path": "/api/logs",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_categories",
    "path": "/api/market/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_category",
    "path": "/api/market/categories/:category",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_servers",
    "path": "/api/market/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_server",
    "path": "/api/market/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_search_market_servers",
    "path": "/api/market/servers/search",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_market_tags",
    "path": "/api/market/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_market_servers_by_tag",
    "path": "/api/market/tags/:tag",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_export_settings",
    "path": "/api/mcp-settings/export",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_downstream_openapi_spec",
    "path": "/api/openapi.json",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_openapi_servers",
    "path": "/api/openapi/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_openapi_stats",
    "path": "/api/openapi/stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_prompts",
    "path": "/api/prompts",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_prompt",
    "path": "/api/prompts/:id",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_registry_servers",
    "path": "/api/registry/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_version",
    "path": "/api/registry/servers/version",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_registry_server_versions",
    "path": "/api/registry/servers/versions",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_builtin_resources",
    "path": "/api/resources",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_builtin_resource",
    "path": "/api/resources/:id",
    "profile": "safe",
  },
  {
    "method": "POST",
    "name": "mcphub_read_builtin_resource",
    "path": "/api/resources/read",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_servers",
    "path": "/api/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_server",
    "path": "/api/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_settings_snapshot",
    "path": "/api/settings",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_user_stats",
    "path": "/api/users-stats",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_runtime_config",
    "path": "/config",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_categories",
    "path": "/discovery/categories",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_servers",
    "path": "/discovery/servers",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server",
    "path": "/discovery/servers/:name",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_discovery_server_install",
    "path": "/discovery/servers/:name/install",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_list_discovery_tags",
    "path": "/discovery/tags",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_health_check",
    "path": "/health",
    "profile": "safe",
  },
  {
    "method": "GET",
    "name": "mcphub_get_public_config",
    "path": "/public-config",
    "profile": "safe",
  },
]
`;
